updated the README file, more streamlined analysis, and template data file in CSV format

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,76 +8,88 @@ output: github_document
 
 ## Installation
 
-You can install and load the latest version from [GitHub](https://github.com/) with:
+You can install and load the latest version from GitHub with:
 
 ``` r
-
 # install.packages("devtools")
 devtools::install_github("g-rashidian/FishGrowth")
-#load the package
+
+# Load the package
 library(FishGrowth)
-
 ```
-## Quick Start Guide
+##
+Quick Start Guide
 The typical workflow involves the following steps:
-```
-```
-# 1. Generate or Import Data
-# We can use built-in simulation data for practice
-df <- create_simulation_data(n_reps = 3) #Simulate 3 replicates per treatment
+
+before starting, download the data template to fill in your experimental data:
+
+# Step 0: Get Data Template
+
+***Use the built-in function to download a blank CSV template for your data.
+get_data_template("my_fish_data.csv")
+This file can be opened in Excel or any text editor. Fill in your experimental data following the provided format. Once completed, you can import it using the `import_fish_data()` function.***
+
+
+***The following steps assume you have either simulated data or imported your own data using the template.***
+
+1. Generate or Import Data
+We can use built-in simulation data for practice.
+
+# Simulate 3 replicates per treatment
+df <- create_simulation_data(n_reps = 3)
+
 # View the first few rows of the data
 head(df)
-```
-```
-#Custom parameters example for advanced users including 5 replicates,
+For advanced users, you can customize parameters (e.g., 5 replicates, 60 fish, 84 days):
 
-#60 fish per tank, over 12 weeks (84 days)
-
-```df <- create_simulation_data(n_reps = 5, n_fish_per_tank = 60, days = 84) 
-# View the first few rows of the data
+df <- create_simulation_data(n_reps = 5, n_fish = 60) # Note: function argument is n_fish, not n_fish_per_tank
 head(df)
-```
-# 2. Process & Metrics Calculation
+
+# data processing and calculation
+
+2. Process & Metrics Calculation
+Calculate growth metrics over the experiment duration.
+
+
 # Calculate growth metrics from df (data frame) over 84 days
 df_calc <- calculate_metrics(df, days = 84)
 
-# View the first few rows of the calculated data
+# View the first few rows
 head(df_calc)
-```
 
-```
-# 3. Aggregate (Tank Level) - CRITICAL for Stats
-```
-# Aggregate individual fish data to tank-level averages
-```
-#this step is essential for proper statistical analysis
+# tank-level aggregation and statistical analysis
+3. Aggregate (Tank Level) - CRITICAL
+Aggregate individual fish data to tank-level averages. This step is essential for proper statistical analysis.
+
 
 df_tank <- aggregate_tank_data(df_calc)
 
-```
-```
-# 4. Visualize Results - Treatment Comparisons
-# Plotting function to compare treatments for a given parameter
-# Plot Final Weight Comparison Across Treatments
+# View the results for verification
+4. Visualize Results
+Compare treatments for specific parameters using the built-in plotting function.
 
+
+# Plot Final Weight Comparison
 plot_treatment_comparison(df_tank, "mean_weight_final", "Final Weight (g)")
 
-# Plot Specific Growth Rate (SGR) Comparison Across Treatments
+# Plot Specific Growth Rate (SGR) Comparison
 plot_treatment_comparison(df_tank, "mean_sgr", "Specific Growth Rate (%/day)")
 
-```
 
-```
-# 5. Generate Final Table
-# Generate a summary table for key parameters of your choice
+# table results  
+5. Generate Final Table
+Generate a summary table with Mean ± SE and significance letters.
 
+
+# Define key parameters
 params <- c("mean_weight_final", "mean_sgr", "fcr")
-generate_summary_table(df_tank, params)
-```
-#generate summary table for all parameters
-generate_summary_table(df_tank)
-```
 
-# 6. Save Full Project Results
-# Export all results to a timestamped folder for record-keeping
+# Generate table
+generate_summary_table(df_tank, params)
+
+# saving and exporting all results
+6. Save Full Project Results
+Export all results (CSVs, Stats, Tables) to a timestamped folder.
+
+
 save_project_results(df_calc, df_tank, params)
